--- a/practice.html
+++ b/practice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Practicing describtion which leads totraffic to the site">
     <title>Document</title>
 </head>
 <body>
