--- a/practice.html
+++ b/practice.html
@@ -15,8 +15,9 @@
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share">
         You tube video
     </iframe>
-    <audio controls>
+    <audio controls loop muted>
         <source src="./audiofiles/Gon' Get Better-e4e921d5693308fe178735b2b2cf0047.mp3">
     </audio>
+    <a href="https://www.freecodecamp.org/learn/full-stack-developer/review-basic-html/basic-html-review" target="_top">freeCodeCamp</a>
 </body>
 </html>
