email name config with tracking p changes

--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Practicing describtion which leads totraffic to the site">
-    <title>Document</title>
+    <title>html practice</title>
+    <link rel="icon" href="./images/saitama.jpg" type="img/jpg">
 </head>
 <body>
     <input type="checkbox" checked />
@@ -19,5 +20,6 @@
         <source src="./audiofiles/Gon' Get Better-e4e921d5693308fe178735b2b2cf0047.mp3">
     </audio>
     <a href="https://www.freecodecamp.org/learn/full-stack-developer/review-basic-html/basic-html-review" target="_top">freeCodeCamp</a>
+    <p>trying to configure github user name and email</p>
 </body>
 </html>
