git branch changes

--- a/practice.html
+++ b/practice.html
@@ -21,5 +21,6 @@
     </audio>
     <a href="https://www.freecodecamp.org/learn/full-stack-developer/review-basic-html/basic-html-review" target="_top">freeCodeCamp</a>
     <p>trying to configure github user name and email</p>
+    <p>configure git brach</p>
 </body>
 </html>
