links and target attribute

--- a/practice.html
+++ b/practice.html
@@ -22,5 +22,6 @@
     <a href="https://www.freecodecamp.org/learn/full-stack-developer/review-basic-html/basic-html-review" target="_top">freeCodeCamp</a>
     <p>trying to configure github user name and email</p>
     <p>configure git brach</p>
+    <a href="https://www.freecodecamp.org" target="_blank" rel="noopener noreferrer">freeCodecamp</a>
 </body>
 </html>
