latest chnges of the day

--- a/practice.html
+++ b/practice.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="./images/saitama.jpg" type="img/jpg">
 </head>
 <body>
-    <input type="checkbox" checked />
+    <header>
+        <input type="checkbox" checked />
     <p>This is &lt;img /&gt; element</p>
     <iframe src="https://www.youtube.com/embed/PkZNo7MFNFg?si=-UBVIUNM3csdeiWF"
      frameborder="0" allowfullscreen
@@ -19,6 +20,34 @@
     <audio controls loop muted>
         <source src="./audiofiles/Gon' Get Better-e4e921d5693308fe178735b2b2cf0047.mp3">
     </audio>
+     <nav>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+        
+    </nav>
+    </header>
+    <section id="about">
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.</p>
+    </section>
+    <section id="services">
+        <h2>Services</h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+    </section>
+    <section id="contacts">
+        <h2>Contacts</h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quod, voluptates, quae, quos quibusdam dolorum quia nemo repudiandae
+            quidem voluptatum quas. Quisquam quod, voluptates, quae, quos
+            quibusdam dolorum quia nemo repudiandae quidem voluptatum quas.
+    </section>
     <a href="https://www.freecodecamp.org/learn/full-stack-developer/review-basic-html/basic-html-review" target="_top">freeCodeCamp</a>
     <p>trying to configure github user name and email</p>
     <p>configure git brach</p>
