--- a/tablepractice.html
+++ b/tablepractice.html
@@ -50,7 +50,8 @@
            </tr>
         </tbody>
         <tfoot>
-            <td>Total Books: 5</td>
+            <td colspan="4">Total Books: 5</td>
+
         </tfoot>
     </table>
 </body>
