--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="vieport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Feedback Form</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
       <h1>Hotel Feedback Form</h1>
+      <p>
+        Thank you for staying with us. Please provide feedback on your recent
+        stay.
+      </p>
       <p>
         Thank you for staying with us. Please provide feedback on your recent
         stay.
