--- a/businesscard/index.html
+++ b/businesscard/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Business Card</title>
 </head>
 <body>
     <div class="business-card">
@@ -18,9 +18,10 @@
                     <a href="">Portfolio</a>
         <hr>
         <div class="social-media">
-            <a href="">Twitter</a>
-            <a href="">LinkedIn</a>
-            <a href="">Github</a>
+            <h2>Connect with me</h2>
+            <a href="https://x.com/home" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/feed" target="_blank">LinkedIn</a>
+            <a href="https://github.com/Mark1-togo" target="_blank">Github</a>
         </div>
     </div>
 </body>
