--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -7,5 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>My To-Do List</h1>
+        <ul class="todo-list">
+        <li><input type="checkbox" id="what-to-do">
+        <label for="what-to-do"> Explore gaming keyboards</label>
+        <ul class="sub-item">
+            <li class="sub-item"><a href="" target="_blank" class="sub-item-link">Store link</a></li>
+        </ul>
+        </li>
+        <li><input type="checkbox" id="what-to-do">
+        <label for="what-to-do"> Explore gaming keyboards</label>
+        <ul>
+            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        </ul>
+        </li>
+        <li><input type="checkbox" id="what-to-do">
+        <label for="what-to-do"> Explore gaming keyboards</label>
+        <ul>
+            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        </ul>
+        </li>
+        <li><input type="checkbox" id="what-to-do">
+        <label for="what-to-do"> Explore gaming keyboards</label>
+        <ul>
+            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        </ul>
+        </li>
+    </ul>
+    </div>
+    
 </body>
 </html>
