final todo list

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -18,22 +18,23 @@
         </li>
         <li><input type="checkbox" id="what-to-do">
         <label for="what-to-do"> Explore gaming keyboards</label>
-        <ul>
-            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        <ul class="sub-item">
+            <li class="sub-item"><a href="" target="_blank" class="sub-item-link">Store link</a></li>
         </ul>
         </li>
         <li><input type="checkbox" id="what-to-do">
         <label for="what-to-do"> Explore gaming keyboards</label>
-        <ul>
-            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        <ul class="sub-item">
+            <li class="sub-item"><a href="" target="_blank" class="sub-item-link">Store link</a></li>
         </ul>
         </li>
         <li><input type="checkbox" id="what-to-do">
         <label for="what-to-do"> Explore gaming keyboards</label>
-        <ul>
-            <li class="sub-item"><a href="" target="_blank">Store link</a></li>
+        <ul class="sub-item">
+            <li class="sub-item"><a href="" target="_blank" class="sub-item-link">Store link</a></li>
         </ul>
         </li>
+        
     </ul>
     </div>
     
